fix overflow on home screen

--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,7 @@ header a{
   display: grid;
   grid-template-columns: 2fr 1fr;
   padding-bottom: 2rem;
+  overflow-x: hidden;
 }
 
 
